--- a/checkout.html
+++ b/checkout.html
@@ -127,7 +127,7 @@
           </div>
 
           <div class="payment-summary-row">
-            <div>Items (3):</div>
+            <div class="cart-quantity-checkout">Items (3):</div>
             <div class="payment-summary-money">$42.75</div>
           </div>
 
